# speedtestcharts

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  play.py
